v0.4.1 (unreleased)
===================

*Bugfix:*

    * Allow copying symlinks

v0.4.0 (2020-07-15)
===================

*Misc:*

    * Drop Python 2 compatibility
    * Fix tests

*Bugfix:*

    * Fix 'diff' mode when copying to a non-existent file

v0.3.8 (2014-03-08)
===================

*Misc:*

    * Insert Py3 compatibility
    * Fix handling of #@with

v0.3.7 (2014-01-03)
===================

*Misc:*

    * Replace ``pyfs`` with ``fslib``
    * Switch packaging to setuptools

v0.3.6 (2013-04-30)
===================

*Bugfix:*

    * Fix packaging

v0.3.5 (2013-04-25)
===================

*Bugfix:*

    * Fix handling of 'elif' in files.

v0.3.4 (2013-04-05)
===================

*Bugfix:*

    * uconf diff and uconf backdiff behave as expected:
      they show the diff that would be applied to target/source.
    * Fix hostname computation

v0.3.3 (2012-11-03)
===================

*Bugfix:*

    * Fix handling of subcommand errors
    * Fix default encoding of files

v0.3.2 (2012-11-03)
===================

*New:*

    * When a command fails on a file, keep working on other files

*Bugfix:*

    * Fix priority of file rules (first rules are executed first)

v0.3.1 (2012-11-02)
===================

*Bugfix:*

    * Packaging fixes

v0.3.0 (2012-11-02)
===================

*New:*

    * First working version of uconf

v0.2.0 (unreleased)
===================

*New:*

    * First draft of a project rewrite, as 'uconf'

v0.1.0c (2010-07-19)
====================

*New:*

    * Include basic "export" command

v0.1.0b (2010-03-09)
====================

*Bugfix:*

    * A few fixes

v0.1.0a (2009-11-20)
====================

*New:*

    * First release of confmgr

.. vim:et:ts=4:sw=4:tw=79:ft=rst: