@@ -4,6 +4,7 @@ v0.4.1 (unreleased)
 *Bugfix:*
 
     * Allow copying symlinks
+    * Add forward, backward, diffs for the ``symlink`` action.
 
 v0.4.0 (2020-07-15)
 ===================
